discussion/kv_engine/176251/176251_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Precompiled headers: Include GMock.h

gmock.h is the hottest header as measured by http://cv.jenkins.couchbase.com/view/Nightly/job/kv_engine-nightly-clang-build-analyzer:

    *** Expensive headers:
    21421 ms: tlm/deps/googletest.exploded/include/gmock/gmock.h (included 62 times, avg 345 ms)
    19983 ms: tlm/deps/googletest.exploded/include/gtest/gtest.h (included 40 times, avg 499 ms)
    12559 ms: tlm/deps/folly.exploded/include/folly/portability/GMock.h (included 52 times, avg 241 ms)
    ...

Add GMock.h to the set of headers we precompile.

Change-Id: I0caa214ba4fe5674f92c664dbaaad2112f32c7db

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-06-15 15:39:55.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-15 16:49:00.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18136/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18136/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19198/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/160]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4371 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2022-06-15T15:56:28.009Z] (266 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19198/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28372/ : FAILURE

Timeout of a CTest test [2022-06-15T16:40:54.725Z]   8/427 Test #255: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28372/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46851/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7796/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19991/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7899/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20985/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-16 09:48:24.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18136/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18136/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18136/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46851/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7796/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19209/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19991/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7899/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20985/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28378/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-06-16 09:59:46.000000000
Message: 
Patch Set 1: Verified+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> Overriding clang-tidy failure, it fails to locate gmock.h 
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-06-16 09:59:50.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-06-16 09:59:56.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-06-16 12:00:27.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
